Adding a page to calculate the amount of formula a baby would need based of the weight, caloric content, and the number of times fed.

--- a/src/main/resources/resources/prop.html
+++ b/src/main/resources/resources/prop.html
@@ -16,7 +16,7 @@
         <li>defaultAmount</li>
     </ul>
 
-    <form onsubmit="updateProperty()">
+    <form onsubmit="updateProperty(); return false;">
         <label for="propKey">Property Key:</label><input id="propKey" type="text">
         <label for="propValue">Property Value:</label><input id="propValue" type="text">
         <input type="submit" value="Add/Update Property">
