Fixing css for the feed report tables.

--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -21,7 +21,7 @@
     </form>
 </div>
 <div id="dailyInfo">
-    <table id="dailyTable">
+    <table id="dailyTable" class="feed">
 
     </table>
     <p id="dailySummary"></p>
