--- a/src/main/resources/resources/prop.html
+++ b/src/main/resources/resources/prop.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="FT.css">
     <script src="jquery.min.js"></script>
     <script src="FT.js"></script>
+    <script src="polymer/platform.js"></script>
+    <link rel="import" href="peices/menu.html" />
 </head>
 <body>
-    <div id="menu">
-    </div>
+    <ft-menu></ft-menu>
     <h1>Feeding Tracker Properties</h1>
 
     <form onsubmit="updateProperty(); return false;">
@@ -18,11 +19,5 @@
     </form>
 
     <p id="result" onclick="$('#result').html('');return false;"></p>
-
-    <script>
-        window.onload = function () {
-            setMenu();
-        };
-    </script>
 </body>
 </html>
