--- a/src/main/resources/resources/weightToAmount.html
+++ b/src/main/resources/resources/weightToAmount.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="FT.css">
     <script src="jquery.min.js"></script>
     <script src="FT.js"></script>
+    <script src="polymer/platform.js"></script>
+    <link rel="import" href="peices/menu.html" />
 </head>
 <body>
-    <div id="menu">
-    </div>
+    <ft-menu></ft-menu>
     <h1>Feeding Amount Calculator</h1>
     <p>The amount of food a  baby needs to intake is based on the babies weight and the caloric content of the food</p>
     <div>
@@ -21,10 +22,5 @@
         </form>
         <p id="result"></p>
     </div>
-    <script>
-        window.onload = function () {
-            setMenu();
-        };
-    </script>
 </body>
 </html>
