Added in a five day trend.

--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -27,11 +27,20 @@
     </table>
     <p id="dailySummary"></p>
 </div>
+<div id="trend">
+    <table>
+        <tr id="header">
+        </tr>
+        <tr id="body">
+        </tr>
+    </table>
+</div>
 <script>
     window.onload = function () {
         getDailySummary();
         document.getElementById("feedDate").value = convertDate(new Date());
         setDefaultValueAmount();
+        setupFiveDayTrend();
     };
 </script>
 </body>
