Renamed the cavaged amount to the the tube fed.  The column in the database is still named cavaged because of backward compatibility, but I'm going to look into changing it.

--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -16,7 +16,7 @@
     <form id="addFeedForm" onsubmit="addFeed(); return false;">
         <label for="feedDate">Feed Date:</label><input id="feedDate" type="date" onchange="getDailySummary()"  /> <br />
         <label for="feedNumber">Feed Number:</label><input id="feedNumber" type="number" /> <br />
-        <label for="cavagedAmount">Cavaged Amount:</label><input id="cavagedAmount" type="number" /> <br />
+        <label for="tubeFedAmount">Tube Fed Amount:</label><input id="tubeFedAmount" type="number" /> <br />
         <label for="totalAmount">Total Amount:</label><input id="totalAmount" type="number" value="100" /> <br />
         <input type="submit" value="Add Feed">
     </form>
