Got the five day trend to be a line graph. Added some weight calculations to do with continuous feeds and a variable to the bottle calculations.  The formula should now be more complete and depict the data better.

--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -6,6 +6,7 @@
     <script src="jquery.min.js" ></script>
     <script src="FT.js"></script>
     <script src="polymer/platform.js"></script>
+    <script src="Chart.min.js"></script>
     <link rel="import" href="peices/menu.html" />
 </head>
 <body>
@@ -27,14 +28,7 @@
     </table>
     <p id="dailySummary"></p>
 </div>
-<div id="trend">
-    <table>
-        <tr id="header">
-        </tr>
-        <tr id="body">
-        </tr>
-    </table>
-</div>
+<canvas id="fiveDayTrend" width="400" height="400"></canvas>
 <script>
     window.onload = function () {
         getDailySummary();
