Got a report page where you can pull up a trend line for whatever date range you wish.

--- a/src/main/resources/resources/peices/menu.html
+++ b/src/main/resources/resources/peices/menu.html
@@ -24,6 +24,7 @@
                 <li><a href="../index.html">Home</a></li>&nbsp;
                 <li><a href="../weightToAmount.html">Amounts</a></li>&nbsp;
                 <li><a href="../bulkFeed.html">Bulk upload</a></li>&nbsp;
+                <li><a href="../report.html">Reports</a></li>&nbsp;
                 <li><a href="../prop.html">Settings</a></li>&nbsp;
             </ul>
         </div>
