--- a/src/main/resources/resources/weightToAmount.html
+++ b/src/main/resources/resources/weightToAmount.html
@@ -14,37 +14,28 @@
     <h1>Feeding Amount Calculator</h1>
     <p>The amount of food a  baby needs to intake is based on the babies weight and the caloric content of the food</p>
     <hr>
-    <h3>Continuous Night Feeding, Bottle During day</h3>
+    <h3>Liquid Feeding Amounts</h3>
     <div>
         <form onsubmit="calculateContinuousFeedingAmount();return false;">
-            <label for="nightFeedPercentInput">Night Feed Percentage:</label><input id="nightFeedPercentInput" type="number"><br />
-            <label for="cCaloriesPerKGInput">Calories/KG</label><input id="cCaloriesPerKGInput" type="number" min="0" required /><br />
-            <label for="cWeightInput">Weight (in kilograms):</label><input id="cWeightInput" type="number" min="0" step="any" required /><br />
-            <label for="cCaloricInput">Caloric Content:</label><input id="cCaloricInput" type="number" min="0" required /><br />
-            <label for="cNumFeedsInput">Number of Feeds per day:</label><input id="cNumFeedsInput" type="number" min="1" required /><br />
+            <label class="aligned" for="nightFeedPercentInput">Night Feed Percentage:</label><input class="aligned" id="nightFeedPercentInput" type="number" placeholder="Night Feed Percentage"><br />
+            <label class="aligned" for="cHoursContinuous">Hours for Night Feed</label><input class="aligned" id="cHoursContinuous" type="number" placeholder="Hours for Night Feed"><br />
+            <label class="aligned" for="cCaloriesPerKGInput">Calories/KG</label><input class="aligned" id="cCaloriesPerKGInput" type="number" min="0" required /><br />
+            <label class="aligned" for="cWeightInput">Weight (in kilograms):</label><input class="aligned" id="cWeightInput" type="number" min="0" step="any" required /><br />
+            <label class="aligned" for="cCaloricInput">Caloric Content:</label><input class="aligned" id="cCaloricInput" type="number" min="0" required /><br />
+            <label class="aligned" for="cNumFeedsInput">Number of bolus feeds:</label><input class="aligned" id="cNumFeedsInput" type="number" min="1" required /><br />
             <input type="submit">
         </form>
-        <p id="cResult"></p>
-    </div>
-    <hr>
-    <h3>Bottle Feeding Only</h3>
-    <div>
-        <form onsubmit="calculateFeedingAmount();return false;">
-            <label for="caloriesPerKGInput">Calories/KG</label><input id="caloriesPerKGInput" type="number" min="0" required /><br />
-            <label for="weightInput">Weight (in kilograms):</label><input id="weightInput" type="number" min="0" step="any" required /><br />
-            <label for="caloricInput">Caloric Content:</label><input id="caloricInput" type="number" min="0" required /><br />
-            <label for="numFeedsInput">Number of Feeds per day:</label><input id="numFeedsInput" type="number" min="1" required /><br />
-            <input type="submit">
-        </form>
-        <p id="result"></p>
+        <div id="cResult">
+        </div>
     </div>
     <hr>
     <h3>Total calories given per day</h3>
     <div>
         <form onsubmit="calculateTotalCalories(); return false;">
-            <label for="caloricContent">Caloric Content:</label><input id="caloricContent" type="number" required /><br />
-            <label for="numberOfFeeds">Number of Feeds per day:</label><input id="numberOfFeeds" type="number" required /><br />
-            <label for="bottleAmount">Number of ml in a bottle:</label><input id="bottleAmount" type="number" required /><br />
+            <label class="aligned" for="caloricContent">Caloric Content:</label><input id="caloricContent" type="number" required /><br />
+            <label class="aligned" for="numberOfFeeds">Number of Feeds per day:</label><input id="numberOfFeeds" type="number" required /><br />
+            <label class="aligned" for="bottleAmount">Number of ml in a bottle:</label><input id="bottleAmount" type="number" required /><br />
+            <label class="aligned" for="nightFeedAmount" >Number of ml at night:</label><input class="aligned" id="nightFeedAmount" type="number" required value="0"><br />
             <input type="submit">
         </form>
         <p id="result2"></p>
