Got the feed table more fully working (i.e. can delete a feed.

--- a/src/main/resources/resources/peices/feed/feed-page.html
+++ b/src/main/resources/resources/peices/feed/feed-page.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="../../FT.css">
     <ft-menu></ft-menu>
     <h1>Feeding Tracker</h1>
-    <feed-form></feed-form>
+    <feed-form id="feedForm"></feed-form>
   </template>
   <script>
     Polymer({
-
+      update : function () {
+        this.$.feedForm.update();
+      }
             });
   </script>
 </polymer-element>
