--- a/src/main/resources/resources/peices/feed/dailyFeed-table.html
+++ b/src/main/resources/resources/peices/feed/dailyFeed-table.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../bower_components/core-ajax/core-ajax.html" />
 <link rel="import" href="../../bower_components/paper-button/paper-button.html" />
+<link rel="import" href="feed-delete.html" />
 
 <polymer-element name="dailyFeed-table" attributes="feedDate">
   <template>
@@ -16,14 +17,13 @@
         <tr>
           <td >{{feed.number}}</td>
           <td >{{feed.tubeFedAmount}}</td>
-          <td id="percent" class="{{getPercentageClass(getPercentTaken(feed))}}">{{getPercentTaken(feed)}}%</td>
-          <td ><paper-button on-click="{{deleteFeed(feed)}}">delete<!--<img src='../../red-delete-button.jpg' width='25px' />--></paper-button></td>
+          <td id="percent" class="{{getPercentageClass(feed)}}">{{getPercentTaken(feed)}}%</td>
+          <td ><feed-delete feed="{{feed}}" updater="{{this}}" on-delete="{{feedDeleted}}"></feed-delete> </td>
         </tr>
       </template>
     </table>
     <p id="summary">Total percent for the day: {{displayPercent}}%</p>
     <core-ajax id="getFeedsAjax" url="/app/feed/{{feedDate}}" auto response="{{feeds}}" handleas="json" on-core-response="{{getFeedSummary}}"></core-ajax>
-    <core-ajax id="deleteFeedAjax" url="/app/feed" method="DELETE" contentType="application/json" ></core-ajax>
   </template>
   <script>
     Polymer({
@@ -33,7 +33,28 @@
       update : function () {
         this.$.getFeedsAjax.go();
       },
-      
+
+      getPercentTaken: function (feed) {
+        return ((feed.totalAmount - feed.tubeFedAmount) / feed.totalAmount * 100).toFixed(2);
+      },
+
+      feedDeleted : function() {
+        this.update();
+      },
+
+      getPercentageClass: function (feed) {
+        var percentTaken = this.getPercentTaken(feed);
+        if(percentTaken != 0 && percentTaken < 30) {
+          return "bad";
+        }
+        else if(percentTaken >= 30 && percentTaken < 70) {
+          return "ok";
+        }
+        else if(percentTaken >= 70) {
+          return "good";
+        }
+      },
+
       getFeedSummary : function () {
         var totalPercent = 0;
         if(this.feeds == null) {
@@ -48,30 +69,6 @@
           percentTaken *= 100;
         }
         this.displayPercent = (totalPercent/arrayLength * 100).toFixed(2);
-      },
-
-      deleteFeed : function(feed) {
-        var ajax = this.$.deleteFeedAjax;
-        ajax.params = '{"id":"' + feed.id + '"}';
-        ajax.go();
-
-        this.update();
-      },
-
-      getPercentTaken : function(feed) {
-        return ((feed.totalAmount - feed.tubeFedAmount)/feed.totalAmount * 100).toFixed(2);
-      },
-
-      getPercentageClass : function (percentTaken) {
-        if(percentTaken != 0 && percentTaken < 30) {
-          return  "bad";
-        }
-        else if(percentTaken >= 30 && percentTaken < 70) {
-          return "ok";
-        }
-        else if(percentTaken >= 70) {
-          return "good";
-        }
       },
 
       ready : function() {
